# pam_simple

./: .gitignore  CMakeLists.txt  Makefile  README.md  add_module.sh  simple
src/: account.c  account.h  auth.c  auth.h  pam_simple.c
src/parsers/: argv_parser.c  shadowfile_parser.c  shadowfile_parser.h
src/utils/: argv_parser.c  argv_parser.h  error_handling.c  error_handling.h  shadowfile_parser.c  shadowfile_parser.h
tests/: test.c
